syntax = "proto3";
package virtengine.staking.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/staking/v1";

// SlashReason indicates the reason for slashing
enum SlashReason {
  option (gogoproto.goproto_enum_prefix) = false;

  // SLASH_REASON_UNSPECIFIED is the default/invalid reason
  SLASH_REASON_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "SlashReasonUnspecified"];

  // SLASH_REASON_DOUBLE_SIGNING is for double signing infractions
  SLASH_REASON_DOUBLE_SIGNING = 1 [(gogoproto.enumvalue_customname) = "SlashReasonDoubleSigning"];

  // SLASH_REASON_DOWNTIME is for excessive downtime
  SLASH_REASON_DOWNTIME = 2 [(gogoproto.enumvalue_customname) = "SlashReasonDowntime"];

  // SLASH_REASON_INVALID_VEID_ATTESTATION is for invalid VEID attestations
  SLASH_REASON_INVALID_VEID_ATTESTATION = 3 [(gogoproto.enumvalue_customname) = "SlashReasonInvalidVEIDAttestation"];

  // SLASH_REASON_MISSED_RECOMPUTATION is for missing VEID recomputation
  SLASH_REASON_MISSED_RECOMPUTATION = 4 [(gogoproto.enumvalue_customname) = "SlashReasonMissedRecomputation"];

  // SLASH_REASON_INCONSISTENT_SCORE is for scores differing from consensus
  SLASH_REASON_INCONSISTENT_SCORE = 5 [(gogoproto.enumvalue_customname) = "SlashReasonInconsistentScore"];

  // SLASH_REASON_EXPIRED_ATTESTATION is for expired attestation
  SLASH_REASON_EXPIRED_ATTESTATION = 6 [(gogoproto.enumvalue_customname) = "SlashReasonExpiredAttestation"];

  // SLASH_REASON_DEBUG_MODE_ENABLED is for enclave debug mode
  SLASH_REASON_DEBUG_MODE_ENABLED = 7 [(gogoproto.enumvalue_customname) = "SlashReasonDebugModeEnabled"];

  // SLASH_REASON_NON_ALLOWLISTED_MEASUREMENT is for non-allowlisted enclave measurement
  SLASH_REASON_NON_ALLOWLISTED_MEASUREMENT = 8 [(gogoproto.enumvalue_customname) = "SlashReasonNonAllowlistedMeasurement"];
}

// RewardType indicates the type of reward
enum RewardType {
  option (gogoproto.goproto_enum_prefix) = false;

  // REWARD_TYPE_UNSPECIFIED is the default/invalid reward type
  REWARD_TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "RewardTypeUnspecified"];

  // REWARD_TYPE_BLOCK_PROPOSAL is for block proposal rewards
  REWARD_TYPE_BLOCK_PROPOSAL = 1 [(gogoproto.enumvalue_customname) = "RewardTypeBlockProposal"];

  // REWARD_TYPE_VEID_VERIFICATION is for VEID verification rewards
  REWARD_TYPE_VEID_VERIFICATION = 2 [(gogoproto.enumvalue_customname) = "RewardTypeVEIDVerification"];

  // REWARD_TYPE_UPTIME is for uptime-based rewards
  REWARD_TYPE_UPTIME = 3 [(gogoproto.enumvalue_customname) = "RewardTypeUptime"];

  // REWARD_TYPE_IDENTITY_NETWORK is for identity network participation rewards
  REWARD_TYPE_IDENTITY_NETWORK = 4 [(gogoproto.enumvalue_customname) = "RewardTypeIdentityNetwork"];

  // REWARD_TYPE_STAKING is for base staking rewards
  REWARD_TYPE_STAKING = 5 [(gogoproto.enumvalue_customname) = "RewardTypeStaking"];
}

// ValidatorPerformance represents a validator's performance metrics
message ValidatorPerformance {
  option (gogoproto.equal) = true;

  // ValidatorAddress is the validator's blockchain address
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // BlocksProposed is the number of blocks proposed in the current epoch
  int64 blocks_proposed = 2 [(gogoproto.jsontag) = "blocks_proposed"];

  // BlocksExpected is the expected number of blocks based on stake weight
  int64 blocks_expected = 3 [(gogoproto.jsontag) = "blocks_expected"];

  // BlocksMissed is the number of missed blocks (when expected to sign)
  int64 blocks_missed = 4 [(gogoproto.jsontag) = "blocks_missed"];

  // TotalSignatures is the total number of blocks signed
  int64 total_signatures = 5 [(gogoproto.jsontag) = "total_signatures"];

  // VEIDVerificationsCompleted is the number of VEID verifications completed
  int64 veid_verifications_completed = 6 [
    (gogoproto.jsontag) = "veid_verifications_completed",
    (gogoproto.customname) = "VEIDVerificationsCompleted"
  ];

  // VEIDVerificationsExpected is the expected VEID verifications based on committee selection
  int64 veid_verifications_expected = 7 [
    (gogoproto.jsontag) = "veid_verifications_expected",
    (gogoproto.customname) = "VEIDVerificationsExpected"
  ];

  // VEIDVerificationScore is the quality score for VEID verifications (0-10000)
  int64 veid_verification_score = 8 [
    (gogoproto.jsontag) = "veid_verification_score",
    (gogoproto.customname) = "VEIDVerificationScore"
  ];

  // UptimeSeconds is the total uptime in seconds
  int64 uptime_seconds = 9 [(gogoproto.jsontag) = "uptime_seconds"];

  // DowntimeSeconds is the total downtime in seconds
  int64 downtime_seconds = 10 [(gogoproto.jsontag) = "downtime_seconds"];

  // ConsecutiveMissedBlocks is the current streak of missed blocks
  int64 consecutive_missed_blocks = 11 [(gogoproto.jsontag) = "consecutive_missed_blocks"];

  // LastProposedHeight is the last height where this validator proposed a block
  int64 last_proposed_height = 12 [(gogoproto.jsontag) = "last_proposed_height"];

  // LastSignedHeight is the last height where this validator signed
  int64 last_signed_height = 13 [(gogoproto.jsontag) = "last_signed_height"];

  // EpochNumber is the epoch this performance record belongs to
  uint64 epoch_number = 14 [(gogoproto.jsontag) = "epoch_number"];

  // UpdatedAt is when this record was last updated
  google.protobuf.Timestamp updated_at = 15 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "updated_at",
    (gogoproto.moretags) = "yaml:\"updated_at\""
  ];

  // OverallScore is the computed overall performance score (0-10000)
  int64 overall_score = 16 [(gogoproto.jsontag) = "overall_score"];
}

// ValidatorSigningInfo contains validator signing information for slashing
message ValidatorSigningInfo {
  option (gogoproto.equal) = true;

  // ValidatorAddress is the validator's blockchain address
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // StartHeight is the height at which validator started signing
  int64 start_height = 2 [(gogoproto.jsontag) = "start_height"];

  // IndexOffset is the current index offset into the signed blocks window
  int64 index_offset = 3 [(gogoproto.jsontag) = "index_offset"];

  // JailedUntil is the time until which the validator is jailed
  google.protobuf.Timestamp jailed_until = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "jailed_until",
    (gogoproto.moretags) = "yaml:\"jailed_until\""
  ];

  // Tombstoned indicates if the validator has been tombstoned (permanently banned)
  bool tombstoned = 5 [(gogoproto.jsontag) = "tombstoned"];

  // MissedBlocksCounter is the counter for missed blocks in the current window
  int64 missed_blocks_counter = 6 [(gogoproto.jsontag) = "missed_blocks_counter"];

  // InfractionCount is the total number of infractions
  int64 infraction_count = 7 [(gogoproto.jsontag) = "infraction_count"];
}

// RewardEpoch represents a reward epoch
message RewardEpoch {
  option (gogoproto.equal) = true;

  // EpochNumber is the epoch identifier
  uint64 epoch_number = 1 [(gogoproto.jsontag) = "epoch_number"];

  // StartHeight is the starting block height
  int64 start_height = 2 [(gogoproto.jsontag) = "start_height"];

  // EndHeight is the ending block height
  int64 end_height = 3 [(gogoproto.jsontag) = "end_height"];

  // StartTime is when the epoch started
  google.protobuf.Timestamp start_time = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "start_time",
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];

  // EndTime is when the epoch ended (zero if current)
  google.protobuf.Timestamp end_time = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "end_time,omitempty",
    (gogoproto.moretags) = "yaml:\"end_time\""
  ];

  // TotalRewardsDistributed is the total rewards distributed
  repeated cosmos.base.v1beta1.Coin total_rewards_distributed = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "total_rewards_distributed",
    (gogoproto.moretags) = "yaml:\"total_rewards_distributed\""
  ];

  // BlockProposalRewards is rewards from block proposals
  repeated cosmos.base.v1beta1.Coin block_proposal_rewards = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "block_proposal_rewards",
    (gogoproto.moretags) = "yaml:\"block_proposal_rewards\""
  ];

  // VEIDRewards is rewards from VEID verification work
  repeated cosmos.base.v1beta1.Coin veid_rewards = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "veid_rewards",
    (gogoproto.moretags) = "yaml:\"veid_rewards\"",
    (gogoproto.customname) = "VEIDRewards"
  ];

  // UptimeRewards is rewards from uptime
  repeated cosmos.base.v1beta1.Coin uptime_rewards = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "uptime_rewards",
    (gogoproto.moretags) = "yaml:\"uptime_rewards\""
  ];

  // ValidatorCount is the number of validators in this epoch
  int64 validator_count = 10 [(gogoproto.jsontag) = "validator_count"];

  // TotalStake is the total stake in this epoch
  string total_stake = 11 [(gogoproto.jsontag) = "total_stake"];

  // Finalized indicates if this epoch is finalized
  bool finalized = 12 [(gogoproto.jsontag) = "finalized"];
}

// ValidatorReward represents a validator's rewards for an epoch
message ValidatorReward {
  option (gogoproto.equal) = true;

  // ValidatorAddress is the validator's address
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // EpochNumber is the epoch this reward belongs to
  uint64 epoch_number = 2 [(gogoproto.jsontag) = "epoch_number"];

  // TotalReward is the total reward amount
  repeated cosmos.base.v1beta1.Coin total_reward = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "total_reward",
    (gogoproto.moretags) = "yaml:\"total_reward\""
  ];

  // BlockProposalReward is reward from block proposals
  repeated cosmos.base.v1beta1.Coin block_proposal_reward = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "block_proposal_reward",
    (gogoproto.moretags) = "yaml:\"block_proposal_reward\""
  ];

  // VEIDReward is reward from VEID verification
  repeated cosmos.base.v1beta1.Coin veid_reward = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "veid_reward",
    (gogoproto.moretags) = "yaml:\"veid_reward\"",
    (gogoproto.customname) = "VEIDReward"
  ];

  // UptimeReward is reward from uptime
  repeated cosmos.base.v1beta1.Coin uptime_reward = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "uptime_reward",
    (gogoproto.moretags) = "yaml:\"uptime_reward\""
  ];

  // IdentityNetworkReward is reward from identity network participation
  repeated cosmos.base.v1beta1.Coin identity_network_reward = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "identity_network_reward",
    (gogoproto.moretags) = "yaml:\"identity_network_reward\""
  ];

  // PerformanceScore is the performance score used for calculation
  int64 performance_score = 8 [(gogoproto.jsontag) = "performance_score"];

  // StakeWeight is the stake weight used for calculation
  string stake_weight = 9 [(gogoproto.jsontag) = "stake_weight"];

  // CalculatedAt is when the reward was calculated
  google.protobuf.Timestamp calculated_at = 10 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "calculated_at",
    (gogoproto.moretags) = "yaml:\"calculated_at\""
  ];

  // BlockHeight is when the reward was recorded
  int64 block_height = 11 [(gogoproto.jsontag) = "block_height"];

  // Claimed indicates if the reward has been claimed
  bool claimed = 12 [(gogoproto.jsontag) = "claimed"];

  // ClaimedAt is when the reward was claimed
  google.protobuf.Timestamp claimed_at = 13 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "claimed_at,omitempty",
    (gogoproto.moretags) = "yaml:\"claimed_at\""
  ];
}

// SlashRecord represents a slashing record
message SlashRecord {
  option (gogoproto.equal) = true;

  // SlashID is the unique identifier for this slashing event
  string slash_id = 1 [
    (gogoproto.jsontag) = "slash_id",
    (gogoproto.moretags) = "yaml:\"slash_id\""
  ];

  // ValidatorAddress is the validator being slashed
  string validator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // Reason is the reason for slashing
  SlashReason reason = 3 [
    (gogoproto.jsontag) = "reason",
    (gogoproto.moretags) = "yaml:\"reason\""
  ];

  // Amount is the amount slashed
  repeated cosmos.base.v1beta1.Coin amount = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.jsontag) = "amount",
    (gogoproto.moretags) = "yaml:\"amount\""
  ];

  // SlashPercent is the percentage slashed (fixed-point, 1e6 scale)
  int64 slash_percent = 5 [(gogoproto.jsontag) = "slash_percent"];

  // InfractionHeight is the block height of the infraction
  int64 infraction_height = 6 [(gogoproto.jsontag) = "infraction_height"];

  // SlashHeight is the block height when slash was executed
  int64 slash_height = 7 [(gogoproto.jsontag) = "slash_height"];

  // SlashTime is when the slash was executed
  google.protobuf.Timestamp slash_time = 8 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "slash_time",
    (gogoproto.moretags) = "yaml:\"slash_time\""
  ];

  // Jailed indicates if the validator was jailed
  bool jailed = 9 [(gogoproto.jsontag) = "jailed"];

  // JailDuration is how long the validator is jailed
  int64 jail_duration = 10 [(gogoproto.jsontag) = "jail_duration"];

  // JailedUntil is when the jail period ends
  google.protobuf.Timestamp jailed_until = 11 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "jailed_until,omitempty",
    (gogoproto.moretags) = "yaml:\"jailed_until\""
  ];

  // Tombstoned indicates if validator is permanently banned
  bool tombstoned = 12 [(gogoproto.jsontag) = "tombstoned"];

  // Evidence contains the infraction evidence
  string evidence = 13 [(gogoproto.jsontag) = "evidence,omitempty"];

  // EvidenceHash is the hash of the evidence
  string evidence_hash = 14 [(gogoproto.jsontag) = "evidence_hash,omitempty"];

  // ReporterAddress is who reported the infraction (if any)
  string reporter_address = 15 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "reporter_address,omitempty",
    (gogoproto.moretags) = "yaml:\"reporter_address\""
  ];
}

// DoubleSignEvidence represents evidence of double signing
message DoubleSignEvidence {
  option (gogoproto.equal) = true;

  // EvidenceID is the unique identifier
  string evidence_id = 1 [(gogoproto.jsontag) = "evidence_id"];

  // ValidatorAddress is the validator who double signed
  string validator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // Height1 is the first height of the double sign
  int64 height_1 = 3 [(gogoproto.jsontag) = "height_1"];

  // Height2 is the second height of the double sign
  int64 height_2 = 4 [(gogoproto.jsontag) = "height_2"];

  // VoteHash1 is the hash of the first vote
  string vote_hash_1 = 5 [(gogoproto.jsontag) = "vote_hash_1"];

  // VoteHash2 is the hash of the second vote
  string vote_hash_2 = 6 [(gogoproto.jsontag) = "vote_hash_2"];

  // DetectedAt is when the double sign was detected
  google.protobuf.Timestamp detected_at = 7 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "detected_at",
    (gogoproto.moretags) = "yaml:\"detected_at\""
  ];

  // DetectedHeight is the block height when detected
  int64 detected_height = 8 [(gogoproto.jsontag) = "detected_height"];

  // Processed indicates if this evidence has been processed
  bool processed = 9 [(gogoproto.jsontag) = "processed"];
}

// InvalidVEIDAttestation represents evidence of invalid VEID attestation
message InvalidVEIDAttestation {
  option (gogoproto.equal) = true;

  // RecordID is the unique identifier
  string record_id = 1 [(gogoproto.jsontag) = "record_id"];

  // ValidatorAddress is the validator with invalid attestation
  string validator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // AttestationID is the ID of the invalid attestation
  string attestation_id = 3 [(gogoproto.jsontag) = "attestation_id"];

  // Reason is why the attestation is invalid
  string reason = 4 [(gogoproto.jsontag) = "reason"];

  // ExpectedScore is the expected score from consensus
  int64 expected_score = 5 [(gogoproto.jsontag) = "expected_score"];

  // ActualScore is the score the validator reported
  int64 actual_score = 6 [(gogoproto.jsontag) = "actual_score"];

  // ScoreDifference is the difference between expected and actual
  int64 score_difference = 7 [(gogoproto.jsontag) = "score_difference"];

  // DetectedAt is when the issue was detected
  google.protobuf.Timestamp detected_at = 8 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "detected_at",
    (gogoproto.moretags) = "yaml:\"detected_at\""
  ];

  // DetectedHeight is the block height when detected
  int64 detected_height = 9 [(gogoproto.jsontag) = "detected_height"];

  // Processed indicates if this evidence has been processed
  bool processed = 10 [(gogoproto.jsontag) = "processed"];
}

// SlashConfig defines the slashing configuration for a reason
message SlashConfig {
  option (gogoproto.equal) = true;

  // Reason is the slash reason
  SlashReason reason = 1 [(gogoproto.jsontag) = "reason"];

  // SlashPercent is the base slash percentage (fixed-point, 1e6 scale)
  int64 slash_percent = 2 [(gogoproto.jsontag) = "slash_percent"];

  // JailDuration is the jail duration in seconds
  int64 jail_duration = 3 [(gogoproto.jsontag) = "jail_duration"];

  // IsTombstone indicates if this should tombstone the validator
  bool is_tombstone = 4 [(gogoproto.jsontag) = "is_tombstone"];

  // EscalationMultiplier is the multiplier for repeat offenses
  int64 escalation_multiplier = 5 [(gogoproto.jsontag) = "escalation_multiplier"];
}
